# Kira

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
apps/accounts/: admin.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/boards/: admin.py  apps.py  models.py  urls.py  views.py
apps/boards/migrations/: 0001_initial.py
apps/core/: admin.py  apps.py  context_processors.py  extensions.py
apps/core/management/commands/: seed_kira.py
apps/issues/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/issues/migrations/: 0001_initial.py
apps/projects/: admin.py  apps.py  models.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py
kira/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: kira.css
templates/: base.html  base_auth.html
templates/accounts/: login.html  signup.html
templates/boards/: detail.html  list.html
templates/boards/partials/: card.html
templates/issues/: detail.html  form.html
templates/issues/partials/: comment.html  issue_list.html  priority_badge.html  status_badge.html
templates/projects/: dashboard.html  detail.html  form.html  list.html
tests/: conftest.py  test_accounts.py  test_boards.py  test_extensions.py  test_issues.py  test_projects.py  test_seed_command.py
