[project]
name = "kira"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "kira.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps", "kira", "tests"]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"apps/core/management/commands/**" = ["B008"]
